--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
         <link rel="stylesheet" href="./styles.css" />
-        <link rel="stylesheet" href="swiploop.css" />
+        <link rel="stylesheet" href="./swiploop.css" />
 
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -146,7 +146,7 @@
             </div>
         </footer>
 
-        <script src="swiploop.js"></script>
+        <script src="./swiploop.js"></script>
         <script src="./script.js"></script>
     </body>
 </html>
