--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <!--
+        <link rel="preload" as="image" href="./images/1.jpg">
+        <link rel="preload" as="image" href="./images/2.jpg">
+        <link rel="preload" as="image" href="./images/3.jpg">
+        <link rel="preload" as="image" href="./images/4.jpg">
+        <link rel="preload" as="image" href="./images/5.jpg">
+        <link rel="preload" as="image" href="./images/6.jpg">
+        -->
 
         <link rel="stylesheet" href="./styles.css" />
         <link rel="stylesheet" href="./swiploop.css" />
@@ -20,13 +28,7 @@
 
     <body>
         <!-- WRITE YOUR GREAT CODE THERE -->
-        <!--
-        <img src="./png/1.png" alt="Небо" style="z-index: -7" class="parallax" />
-        <img src="./png/2.png" alt="Небо" style="z-index: -6" class="parallax" />
-        <img src="./png/3.png" alt="Небо" style="z-index: -5" class="parallax" />
-        <img src="./png/4.png" alt="Небо" style="z-index: -4" class="parallax" />
-        <img src="./png/5.png" alt="Небо" style="z-index: -3" class="parallax" />
-        -->
+        <div class="back-parallax"></div>
 
         <div class="blackout"></div>
 
