--- a/index.html
+++ b/index.html
@@ -4,14 +4,6 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <!--
-        <link rel="preload" as="image" href="./images/1.jpg">
-        <link rel="preload" as="image" href="./images/2.jpg">
-        <link rel="preload" as="image" href="./images/3.jpg">
-        <link rel="preload" as="image" href="./images/4.jpg">
-        <link rel="preload" as="image" href="./images/5.jpg">
-        <link rel="preload" as="image" href="./images/6.jpg">
-        -->
 
         <link rel="stylesheet" href="./styles.css" />
         <link rel="stylesheet" href="./swiploop.css" />
@@ -28,8 +20,8 @@
 
     <body>
         <!-- WRITE YOUR GREAT CODE THERE -->
+        <div class="bg-image"></div>
         <div class="back-parallax"></div>
-
         <div class="blackout"></div>
 
         <header>
@@ -49,7 +41,7 @@
                                 <div class="img-div"></div>
                             </div>
                             <div class="card-name">
-                                <p class="art-name">Вечерний город</p>
+                                <p class="art-name">Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
                             </div>
                         </div>
                     </div>
@@ -59,7 +51,7 @@
                                 <div class="img-div"></div>
                             </div>
                             <div class="card-name">
-                                <p class="art-name">Водопад</p>
+                                <p class="art-name">Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
                             </div>
                         </div>
                     </div>
@@ -69,7 +61,7 @@
                                 <div class="img-div"></div>
                             </div>
                             <div class="card-name">
-                                <p class="art-name">Розовые облака</p>
+                                <p class="art-name">Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
                             </div>
                         </div>
                     </div>
@@ -79,7 +71,7 @@
                                 <div class="img-div"></div>
                             </div>
                             <div class="card-name">
-                                <p class="art-name">Ночной город с высоты птичьего полета</p>
+                                <p class="art-name">Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
                             </div>
                         </div>
                     </div>
@@ -89,7 +81,7 @@
                                 <div class="img-div"></div>
                             </div>
                             <div class="card-name">
-                                <p class="art-name">Туман и горы</p>
+                                <p class="art-name">Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
                             </div>
                         </div>
                     </div>
@@ -99,7 +91,7 @@
                                 <div class="img-div"></div>
                             </div>
                             <div class="card-name">
-                                <p class="art-name">Сумерки</p>
+                                <p class="art-name">Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
                             </div>
                         </div>
                     </div>
