--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <body>
         <!-- WRITE YOUR GREAT CODE THERE -->
         <div class="bg-image"></div>
+        
         <div class="back-parallax"></div>
         <div class="blackout"></div>
 
@@ -41,7 +42,9 @@
                                 <div class="img-div"></div>
                             </div>
                             <div class="card-name">
-                                <p class="art-name">Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
+                                <p class="art-name">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -51,7 +54,9 @@
                                 <div class="img-div"></div>
                             </div>
                             <div class="card-name">
-                                <p class="art-name">Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
+                                <p class="art-name">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -61,7 +66,9 @@
                                 <div class="img-div"></div>
                             </div>
                             <div class="card-name">
-                                <p class="art-name">Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
+                                <p class="art-name">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -71,7 +78,9 @@
                                 <div class="img-div"></div>
                             </div>
                             <div class="card-name">
-                                <p class="art-name">Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
+                                <p class="art-name">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -81,7 +90,9 @@
                                 <div class="img-div"></div>
                             </div>
                             <div class="card-name">
-                                <p class="art-name">Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
+                                <p class="art-name">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -91,7 +102,9 @@
                                 <div class="img-div"></div>
                             </div>
                             <div class="card-name">
-                                <p class="art-name">Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
+                                <p class="art-name">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit
+                                </p>
                             </div>
                         </div>
                     </div>
