--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="Галерея артов с параллакс-эффектом.">
 
         <link rel="stylesheet" href="./styles.css" />
         <link rel="stylesheet" href="./swiploop.css" />
@@ -152,8 +153,9 @@
                 <p class="author">Warm Blanket</p>
             </div>
         </footer>
-
+        
         <script src="./swiploop.js"></script>
+        <script src="./preload.js"></script>
         <script src="./script.js"></script>
     </body>
 </html>
