--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="Галерея артов с параллакс-эффектом.">
+        <meta name="description" content="Галерея артов с параллакс-эффектом." />
 
         <link rel="stylesheet" href="./styles.css" />
         <link rel="stylesheet" href="./swiploop.css" />
@@ -22,7 +22,7 @@
     <body>
         <!-- WRITE YOUR GREAT CODE THERE -->
         <div class="bg-image"></div>
-        
+
         <div class="back-parallax"></div>
         <div class="blackout"></div>
 
@@ -153,7 +153,7 @@
                 <p class="author">Warm Blanket</p>
             </div>
         </footer>
-        
+
         <script src="./swiploop.js"></script>
         <script src="./preload.js"></script>
         <script src="./script.js"></script>
