Add first art, fix footer

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                             </div>
                             <div class="card-name">
                                 <p class="art-name">
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit
+                                    Виктор и Мия
                                 </p>
                             </div>
                         </div>
@@ -131,14 +131,14 @@
                     <img
                         src="./svg/angle-small-up-free-icon-font.svg"
                         alt="Открыть галерею"
-                        class="icons"
+                        class="icons-b"
                     />
                 </button>
                 <button class="close-gallery">
                     <img
                         src="./svg/angle-small-down-free-icon-font.svg"
                         alt="Закрыть галерею"
-                        class="icons"
+                        class="icons-b"
                     />
                 </button>
             </div>
